--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "ai-tech-blog",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d .next"
-  },
+ "scripts": {
+  "dev": "next dev --turbopack",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "predeploy": "next build && next export",
+  "deploy": "gh-pages -d out"
+}
+,
   "dependencies": {
     "next": "15.3.3",
     "react": "^19.0.0",
