--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "build": "next build",
   "start": "next start",
   "lint": "next lint",
-  "predeploy": "next build && next export",
-  "deploy": "gh-pages -d out"
+ "predeploy": "next build",
+"deploy": "gh-pages -d out"
 }
 ,
   "dependencies": {
