feat(news): Add MongoDB integration and scheduled news fetching

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy": "gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.2",
     "next": "15.3.3",
+    "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rss-parser": "^3.13.0"
