--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@tiptap/pm": "^2.22.0",
     "@tiptap/react": "^2.22.0",
     "@tiptap/starter-kit": "^2.22.0",
+    "lucide-react": "^0.523.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
