--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tiptap/pm": "^2.22.0",
     "@tiptap/react": "^2.22.0",
     "@tiptap/starter-kit": "^2.22.0",
+    "cheerio": "^1.1.0",
     "lucide-react": "^0.523.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
