checking md functionality

--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "deploy": "gh-pages -d out --dotfiles"
   },
   "dependencies": {
+    "@tiptap/extension-code-block": "^2.25.0",
     "@tiptap/extension-highlight": "^2.22.0",
-    "@tiptap/extension-link": "^2.22.0",
+    "@tiptap/extension-image": "^2.25.0",
+    "@tiptap/extension-link": "^2.25.0",
     "@tiptap/pm": "^2.22.0",
-    "@tiptap/react": "^2.22.0",
-    "@tiptap/starter-kit": "^2.22.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
     "cheerio": "^1.1.0",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "lucide-react": "^0.523.0",
+    "marked": "^16.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
@@ -25,10 +30,17 @@
     "node-cron": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "rss-parser": "^3.13.0"
+    "react-markdown": "^10.1.0",
+    "react-textarea-autosize": "^8.5.9",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
+    "rss-parser": "^3.13.0",
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.14",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
