--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "cheerio": "^1.1.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.523.0",
     "marked": "^16.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "node-cron": "^4.1.0",
     "react": "^19.0.0",
