--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
     "remark": "^15.0.1",
