--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/extension-highlight": "^2.22.0",
     "@tiptap/extension-image": "^2.25.0",
     "@tiptap/extension-link": "^2.25.0",
+    "@tiptap/extension-underline": "^2.26.1",
     "@tiptap/pm": "^2.22.0",
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
